tests/enum/good/simple.catala_en
## Article

```catala
declaration enumeration E:
  -- Case1 content integer
  -- Case2

declaration scope A:
  context output x content E
  context output y content integer

scope A:
  definition x equals Case1 content 2
  definition y equals match x with pattern
    -- Case1 of i : 42
    -- Case2 : 43
```



```catala-test-inline
$ catala Typecheck --check-invariants
┌─[RESULT]─
│All invariant checks passed
└─
┌─[RESULT]─
│Typechecking successful!
└─
```

```catala-test-inline
$ catala test-scope A
┌─[RESULT]─
│x = Case1 2
│y = 42
└─
```
