tests/enum/bad/impossible.catala_en
## Article

```catala
declaration enumeration E:
  -- Case1 content integer
  -- Case2

declaration scope A:
  context output x content E
  context output y content integer

scope A:
  definition x equals Case2
  definition y equals match x with pattern
    -- Case1 content i : 42
    -- Case2 : #[error.message = "Precondition for A broken: x is Case2"] impossible
```


```catala-test-cli
$ catala Typecheck --check-invariants
┌─[RESULT]─
│ All invariant checks passed
└─
┌─[RESULT]─
│ Typechecking successful!
└─
```

```catala-test-cli
$ catala test-scope A
┌─[ERROR]─
│
│  During evaluation: "impossible" computation reached.
│  Precondition for A broken: x is Case2
│
├─➤ tests/enum/bad/impossible.catala_en:16.75-16.85:
│    │
│ 16 │     -- Case2 : #[error.message = "Precondition for A broken: x is Case2"] impossible
│    │                                                                           ‾‾‾‾‾‾‾‾‾‾
└─ Article
#return code 123#
```
